--- a/app/src/main/res/layout/activity_triangle2.xml
+++ b/app/src/main/res/layout/activity_triangle2.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.sheepyang.opengldemo.Triangle1Activity">
+    tools:context="me.sheepyang.opengldemo.activity.triangle.Triangle1Activity">
 
     <android.opengl.GLSurfaceView
         android:id="@+id/gl_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/triangle2"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"/>
+</RelativeLayout>
