--- a/app/src/main/res/layout/activity_square.xml
+++ b/app/src/main/res/layout/activity_square.xml
@@ -15,48 +15,29 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_setting"
         android:padding="15dp"
         android:text="opengl使用的是右手坐标系。\n屏幕中央为原点，正边界为1，负边界为-1。\n图中三角形坐标为：\n{\n\t0.5，0.5，0\n\t-0.5，-0.5，0\n\t0.5，-0.5，0\n}"
         android:textColor="@android:color/white"
         android:textSize="14sp"/>
 
     <TextView
-        android:id="@+id/tv_hint"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_type"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="请输入边数n（n >= 3，n = 0 为圆形）"
+        android:layout_above="@+id/btn_change"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="15dp"
+        android:text="当前：顶点法绘制"
         android:textColor="@android:color/white"
         android:textSize="14sp"/>
 
-    <LinearLayout
-        android:id="@+id/ll_setting"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_change"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_hint"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:digits="0123456789"
-            android:hint="请输入整数"
-            android:inputType="number"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:textSize="14sp"/>
-
-        <Button
-            android:id="@+id/btn_change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="重绘"
-            android:textSize="14sp"/>
-    </LinearLayout>
+        android:layout_marginBottom="30dp"
+        android:text="切换绘制方式"
+        android:textSize="14sp"/>
 </RelativeLayout>
